fix: size on mobile for body padding and intro title

--- a/sass/css/_header.scss
+++ b/sass/css/_header.scss
@@ -192,6 +192,12 @@
 
 .intro__title {
   font: {
-    size: var(--font-size-xxxxxl);
+    size: var(--font-size-xxxxl);
+  }
+
+  @include sm {
+    font: {
+      size: var(--font-size-xxxxxl);
+    }
   }
 }
